java/src/main/tdanford/browser/ExploreGrammarParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 ExploreGrammar.g 2010-12-13 16:28:41
 
package tdanford.browser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ExploreGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PREFIX", "FORWARDPROPS", "REVERSEPROPS", "FORWARDSTAR", "REVERSESTAR", "FORWARD", "REVERSE", "EVAL", "LOOKUP", "ALL", "CHOOSE", "PRETTYPRINT", "LIST", "DEFINE", "DOLLAR", "QUOTE", "LANGLE", "RANGLE", "COLON", "TYPED", "SLASH", "SIZE", "BLANKTYPE", "TYPEDLITERAL", "WS", "VARIABLE", "KEYWORD", "IRI", "NEWLINE", "PREFIXED", "LITERAL", "INTEGER", "QUOTED", "LETTER", "DIGIT"
    };
    public static final int EOF=-1;
    public static final int PREFIX=4;
    public static final int FORWARDPROPS=5;
    public static final int REVERSEPROPS=6;
    public static final int FORWARDSTAR=7;
    public static final int REVERSESTAR=8;
    public static final int FORWARD=9;
    public static final int REVERSE=10;
    public static final int EVAL=11;
    public static final int LOOKUP=12;
    public static final int ALL=13;
    public static final int CHOOSE=14;
    public static final int PRETTYPRINT=15;
    public static final int LIST=16;
    public static final int DEFINE=17;
    public static final int DOLLAR=18;
    public static final int QUOTE=19;
    public static final int LANGLE=20;
    public static final int RANGLE=21;
    public static final int COLON=22;
    public static final int TYPED=23;
    public static final int SLASH=24;
    public static final int SIZE=25;
    public static final int BLANKTYPE=26;
    public static final int TYPEDLITERAL=27;
    public static final int WS=28;
    public static final int VARIABLE=29;
    public static final int KEYWORD=30;
    public static final int IRI=31;
    public static final int NEWLINE=32;
    public static final int PREFIXED=33;
    public static final int LITERAL=34;
    public static final int INTEGER=35;
    public static final int QUOTED=36;
    public static final int LETTER=37;
    public static final int DIGIT=38;

    // delegates
    // delegators


        public ExploreGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ExploreGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ExploreGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "ExploreGrammar.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // ExploreGrammar.g:49:1: program : ( WS )? command ( WS command )* ( WS )? EOF -> ( command )+ ;
    public final ExploreGrammarParser.program_return program() throws RecognitionException {
        ExploreGrammarParser.program_return retval = new ExploreGrammarParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WS1=null;
        Token WS3=null;
        Token WS5=null;
        Token EOF6=null;
        ExploreGrammarParser.command_return command2 = null;

        ExploreGrammarParser.command_return command4 = null;


        Object WS1_tree=null;
        Object WS3_tree=null;
        Object WS5_tree=null;
        Object EOF6_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
        try {
            // ExploreGrammar.g:49:9: ( ( WS )? command ( WS command )* ( WS )? EOF -> ( command )+ )
            // ExploreGrammar.g:49:11: ( WS )? command ( WS command )* ( WS )? EOF
            {
            // ExploreGrammar.g:49:11: ( WS )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==WS) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // ExploreGrammar.g:49:11: WS
                    {
                    WS1=(Token)match(input,WS,FOLLOW_WS_in_program297);  
                    stream_WS.add(WS1);


                    }
                    break;

            }

            pushFollow(FOLLOW_command_in_program300);
            command2=command();

            state._fsp--;

            stream_command.add(command2.getTree());
            // ExploreGrammar.g:49:23: ( WS command )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==WS) ) {
                    int LA2_1 = input.LA(2);

                    if ( ((LA2_1>=PREFIX && LA2_1<=DEFINE)||LA2_1==SIZE) ) {
                        alt2=1;
                    }


                }


                switch (alt2) {
            	case 1 :
            	    // ExploreGrammar.g:49:24: WS command
            	    {
            	    WS3=(Token)match(input,WS,FOLLOW_WS_in_program303);  
            	    stream_WS.add(WS3);

            	    pushFollow(FOLLOW_command_in_program305);
            	    command4=command();

            	    state._fsp--;

            	    stream_command.add(command4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // ExploreGrammar.g:49:37: ( WS )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==WS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // ExploreGrammar.g:49:37: WS
                    {
                    WS5=(Token)match(input,WS,FOLLOW_WS_in_program309);  
                    stream_WS.add(WS5);


                    }
                    break;

            }

            EOF6=(Token)match(input,EOF,FOLLOW_EOF_in_program312);  
            stream_EOF.add(EOF6);



            // AST REWRITE
            // elements: command
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 49:45: -> ( command )+
            {
                if ( !(stream_command.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_command.hasNext() ) {
                    adaptor.addChild(root_0, stream_command.nextTree());

                }
                stream_command.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // ExploreGrammar.g:51:1: command : ( forward_command | reverse_command | forward_props_command | reverse_props_command | forward_star_command | reverse_star_command | eval_command | all_command | choose_command | lookup_command | interpreter_command );
    public final ExploreGrammarParser.command_return command() throws RecognitionException {
        ExploreGrammarParser.command_return retval = new ExploreGrammarParser.command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ExploreGrammarParser.forward_command_return forward_command7 = null;

        ExploreGrammarParser.reverse_command_return reverse_command8 = null;

        ExploreGrammarParser.forward_props_command_return forward_props_command9 = null;

        ExploreGrammarParser.reverse_props_command_return reverse_props_command10 = null;

        ExploreGrammarParser.forward_star_command_return forward_star_command11 = null;

        ExploreGrammarParser.reverse_star_command_return reverse_star_command12 = null;

        ExploreGrammarParser.eval_command_return eval_command13 = null;

        ExploreGrammarParser.all_command_return all_command14 = null;

        ExploreGrammarParser.choose_command_return choose_command15 = null;

        ExploreGrammarParser.lookup_command_return lookup_command16 = null;

        ExploreGrammarParser.interpreter_command_return interpreter_command17 = null;



        try {
            // ExploreGrammar.g:52:2: ( forward_command | reverse_command | forward_props_command | reverse_props_command | forward_star_command | reverse_star_command | eval_command | all_command | choose_command | lookup_command | interpreter_command )
            int alt4=11;
            switch ( input.LA(1) ) {
            case FORWARD:
                {
                alt4=1;
                }
                break;
            case REVERSE:
                {
                alt4=2;
                }
                break;
            case FORWARDPROPS:
                {
                alt4=3;
                }
                break;
            case REVERSEPROPS:
                {
                alt4=4;
                }
                break;
            case FORWARDSTAR:
                {
                alt4=5;
                }
                break;
            case REVERSESTAR:
                {
                alt4=6;
                }
                break;
            case EVAL:
                {
                alt4=7;
                }
                break;
            case ALL:
                {
                alt4=8;
                }
                break;
            case CHOOSE:
                {
                alt4=9;
                }
                break;
            case LOOKUP:
                {
                alt4=10;
                }
                break;
            case PREFIX:
            case PRETTYPRINT:
            case LIST:
            case DEFINE:
            case SIZE:
                {
                alt4=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // ExploreGrammar.g:52:4: forward_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forward_command_in_command327);
                    forward_command7=forward_command();

                    state._fsp--;

                    adaptor.addChild(root_0, forward_command7.getTree());

                    }
                    break;
                case 2 :
                    // ExploreGrammar.g:53:4: reverse_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_reverse_command_in_command332);
                    reverse_command8=reverse_command();

                    state._fsp--;

                    adaptor.addChild(root_0, reverse_command8.getTree());

                    }
                    break;
                case 3 :
                    // ExploreGrammar.g:54:4: forward_props_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forward_props_command_in_command337);
                    forward_props_command9=forward_props_command();

                    state._fsp--;

                    adaptor.addChild(root_0, forward_props_command9.getTree());

                    }
                    break;
                case 4 :
                    // ExploreGrammar.g:55:4: reverse_props_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_reverse_props_command_in_command342);
                    reverse_props_command10=reverse_props_command();

                    state._fsp--;

                    adaptor.addChild(root_0, reverse_props_command10.getTree());

                    }
                    break;
                case 5 :
                    // ExploreGrammar.g:56:4: forward_star_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forward_star_command_in_command347);
                    forward_star_command11=forward_star_command();

                    state._fsp--;

                    adaptor.addChild(root_0, forward_star_command11.getTree());

                    }
                    break;
                case 6 :
                    // ExploreGrammar.g:57:4: reverse_star_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_reverse_star_command_in_command352);
                    reverse_star_command12=reverse_star_command();

                    state._fsp--;

                    adaptor.addChild(root_0, reverse_star_command12.getTree());

                    }
                    break;
                case 7 :
                    // ExploreGrammar.g:58:4: eval_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_eval_command_in_command357);
                    eval_command13=eval_command();

                    state._fsp--;

                    adaptor.addChild(root_0, eval_command13.getTree());

                    }
                    break;
                case 8 :
                    // ExploreGrammar.g:59:4: all_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_all_command_in_command362);
                    all_command14=all_command();

                    state._fsp--;

                    adaptor.addChild(root_0, all_command14.getTree());

                    }
                    break;
                case 9 :
                    // ExploreGrammar.g:60:4: choose_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_choose_command_in_command367);
                    choose_command15=choose_command();

                    state._fsp--;

                    adaptor.addChild(root_0, choose_command15.getTree());

                    }
                    break;
                case 10 :
                    // ExploreGrammar.g:61:4: lookup_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_lookup_command_in_command372);
                    lookup_command16=lookup_command();

                    state._fsp--;

                    adaptor.addChild(root_0, lookup_command16.getTree());

                    }
                    break;
                case 11 :
                    // ExploreGrammar.g:62:4: interpreter_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_interpreter_command_in_command378);
                    interpreter_command17=interpreter_command();

                    state._fsp--;

                    adaptor.addChild(root_0, interpreter_command17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "command"

    public static class interpreter_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "interpreter_command"
    // ExploreGrammar.g:65:1: interpreter_command : ( list_command | pretty_print_command | define_command | size_command | prefix_command );
    public final ExploreGrammarParser.interpreter_command_return interpreter_command() throws RecognitionException {
        ExploreGrammarParser.interpreter_command_return retval = new ExploreGrammarParser.interpreter_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ExploreGrammarParser.list_command_return list_command18 = null;

        ExploreGrammarParser.pretty_print_command_return pretty_print_command19 = null;

        ExploreGrammarParser.define_command_return define_command20 = null;

        ExploreGrammarParser.size_command_return size_command21 = null;

        ExploreGrammarParser.prefix_command_return prefix_command22 = null;



        try {
            // ExploreGrammar.g:66:2: ( list_command | pretty_print_command | define_command | size_command | prefix_command )
            int alt5=5;
            switch ( input.LA(1) ) {
            case LIST:
                {
                alt5=1;
                }
                break;
            case PRETTYPRINT:
                {
                alt5=2;
                }
                break;
            case DEFINE:
                {
                alt5=3;
                }
                break;
            case SIZE:
                {
                alt5=4;
                }
                break;
            case PREFIX:
                {
                alt5=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // ExploreGrammar.g:66:4: list_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_list_command_in_interpreter_command393);
                    list_command18=list_command();

                    state._fsp--;

                    adaptor.addChild(root_0, list_command18.getTree());

                    }
                    break;
                case 2 :
                    // ExploreGrammar.g:67:4: pretty_print_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_pretty_print_command_in_interpreter_command399);
                    pretty_print_command19=pretty_print_command();

                    state._fsp--;

                    adaptor.addChild(root_0, pretty_print_command19.getTree());

                    }
                    break;
                case 3 :
                    // ExploreGrammar.g:68:4: define_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_define_command_in_interpreter_command404);
                    define_command20=define_command();

                    state._fsp--;

                    adaptor.addChild(root_0, define_command20.getTree());

                    }
                    break;
                case 4 :
                    // ExploreGrammar.g:69:4: size_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_size_command_in_interpreter_command409);
                    size_command21=size_command();

                    state._fsp--;

                    adaptor.addChild(root_0, size_command21.getTree());

                    }
                    break;
                case 5 :
                    // ExploreGrammar.g:70:4: prefix_command
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_prefix_command_in_interpreter_command414);
                    prefix_command22=prefix_command();

                    state._fsp--;

                    adaptor.addChild(root_0, prefix_command22.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "interpreter_command"

    public static class forward_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "forward_command"
    // ExploreGrammar.g:73:1: forward_command : FORWARD WS name -> ^( FORWARD name ) ;
    public final ExploreGrammarParser.forward_command_return forward_command() throws RecognitionException {
        ExploreGrammarParser.forward_command_return retval = new ExploreGrammarParser.forward_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token FORWARD23=null;
        Token WS24=null;
        ExploreGrammarParser.name_return name25 = null;


        Object FORWARD23_tree=null;
        Object WS24_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_FORWARD=new RewriteRuleTokenStream(adaptor,"token FORWARD");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        try {
            // ExploreGrammar.g:73:17: ( FORWARD WS name -> ^( FORWARD name ) )
            // ExploreGrammar.g:73:19: FORWARD WS name
            {
            FORWARD23=(Token)match(input,FORWARD,FOLLOW_FORWARD_in_forward_command427);  
            stream_FORWARD.add(FORWARD23);

            WS24=(Token)match(input,WS,FOLLOW_WS_in_forward_command429);  
            stream_WS.add(WS24);

            pushFollow(FOLLOW_name_in_forward_command431);
            name25=name();

            state._fsp--;

            stream_name.add(name25.getTree());


            // AST REWRITE
            // elements: FORWARD, name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 73:35: -> ^( FORWARD name )
            {
                // ExploreGrammar.g:73:38: ^( FORWARD name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_FORWARD.nextNode(), root_1);

                adaptor.addChild(root_1, stream_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "forward_command"

    public static class reverse_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "reverse_command"
    // ExploreGrammar.g:74:1: reverse_command : REVERSE WS name -> ^( REVERSE name ) ;
    public final ExploreGrammarParser.reverse_command_return reverse_command() throws RecognitionException {
        ExploreGrammarParser.reverse_command_return retval = new ExploreGrammarParser.reverse_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token REVERSE26=null;
        Token WS27=null;
        ExploreGrammarParser.name_return name28 = null;


        Object REVERSE26_tree=null;
        Object WS27_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_REVERSE=new RewriteRuleTokenStream(adaptor,"token REVERSE");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        try {
            // ExploreGrammar.g:74:17: ( REVERSE WS name -> ^( REVERSE name ) )
            // ExploreGrammar.g:74:19: REVERSE WS name
            {
            REVERSE26=(Token)match(input,REVERSE,FOLLOW_REVERSE_in_reverse_command447);  
            stream_REVERSE.add(REVERSE26);

            WS27=(Token)match(input,WS,FOLLOW_WS_in_reverse_command449);  
            stream_WS.add(WS27);

            pushFollow(FOLLOW_name_in_reverse_command451);
            name28=name();

            state._fsp--;

            stream_name.add(name28.getTree());


            // AST REWRITE
            // elements: REVERSE, name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 74:35: -> ^( REVERSE name )
            {
                // ExploreGrammar.g:74:38: ^( REVERSE name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_REVERSE.nextNode(), root_1);

                adaptor.addChild(root_1, stream_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "reverse_command"

    public static class forward_star_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "forward_star_command"
    // ExploreGrammar.g:75:1: forward_star_command : FORWARDSTAR WS name -> ^( FORWARDSTAR name ) ;
    public final ExploreGrammarParser.forward_star_command_return forward_star_command() throws RecognitionException {
        ExploreGrammarParser.forward_star_command_return retval = new ExploreGrammarParser.forward_star_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token FORWARDSTAR29=null;
        Token WS30=null;
        ExploreGrammarParser.name_return name31 = null;


        Object FORWARDSTAR29_tree=null;
        Object WS30_tree=null;
        RewriteRuleTokenStream stream_FORWARDSTAR=new RewriteRuleTokenStream(adaptor,"token FORWARDSTAR");
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        try {
            // ExploreGrammar.g:75:22: ( FORWARDSTAR WS name -> ^( FORWARDSTAR name ) )
            // ExploreGrammar.g:75:24: FORWARDSTAR WS name
            {
            FORWARDSTAR29=(Token)match(input,FORWARDSTAR,FOLLOW_FORWARDSTAR_in_forward_star_command468);  
            stream_FORWARDSTAR.add(FORWARDSTAR29);

            WS30=(Token)match(input,WS,FOLLOW_WS_in_forward_star_command470);  
            stream_WS.add(WS30);

            pushFollow(FOLLOW_name_in_forward_star_command472);
            name31=name();

            state._fsp--;

            stream_name.add(name31.getTree());


            // AST REWRITE
            // elements: name, FORWARDSTAR
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 75:44: -> ^( FORWARDSTAR name )
            {
                // ExploreGrammar.g:75:47: ^( FORWARDSTAR name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_FORWARDSTAR.nextNode(), root_1);

                adaptor.addChild(root_1, stream_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "forward_star_command"

    public static class reverse_star_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "reverse_star_command"
    // ExploreGrammar.g:76:1: reverse_star_command : REVERSESTAR WS name -> ^( REVERSESTAR name ) ;
    public final ExploreGrammarParser.reverse_star_command_return reverse_star_command() throws RecognitionException {
        ExploreGrammarParser.reverse_star_command_return retval = new ExploreGrammarParser.reverse_star_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token REVERSESTAR32=null;
        Token WS33=null;
        ExploreGrammarParser.name_return name34 = null;


        Object REVERSESTAR32_tree=null;
        Object WS33_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_REVERSESTAR=new RewriteRuleTokenStream(adaptor,"token REVERSESTAR");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        try {
            // ExploreGrammar.g:76:22: ( REVERSESTAR WS name -> ^( REVERSESTAR name ) )
            // ExploreGrammar.g:76:24: REVERSESTAR WS name
            {
            REVERSESTAR32=(Token)match(input,REVERSESTAR,FOLLOW_REVERSESTAR_in_reverse_star_command488);  
            stream_REVERSESTAR.add(REVERSESTAR32);

            WS33=(Token)match(input,WS,FOLLOW_WS_in_reverse_star_command490);  
            stream_WS.add(WS33);

            pushFollow(FOLLOW_name_in_reverse_star_command492);
            name34=name();

            state._fsp--;

            stream_name.add(name34.getTree());


            // AST REWRITE
            // elements: REVERSESTAR, name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 76:44: -> ^( REVERSESTAR name )
            {
                // ExploreGrammar.g:76:47: ^( REVERSESTAR name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_REVERSESTAR.nextNode(), root_1);

                adaptor.addChild(root_1, stream_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
